--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 *{
 
-<!-- MENU SUPERIOR-->
-
 margin: 0px;
-
+padding: 0px;
+box-sizing: border-box;
 }
 
 #menusuperior{
 
 background-color: #303030;
 padding-bottom: 150px;
-padding-top: 50px;
+padding-top: 115px;
+height: 430px;
 
 
 }
@@ -22,6 +22,7 @@ font-family: "inter";
 text-align: left;
 margin-top:80px;
 margin-left: 42px;
+font-size: 44px;
 }
 
  #titulosecundario{
@@ -29,43 +30,79 @@ margin-left: 42px;
     color: #FFFFFF;
     font-family: "inter";
     margin-left: 42px;
-    font-size: 13px;
+    font-size: 19px;
 }
  
-<!-- MENU INFORMACIONAL-->
 
-.b {border: 5px solid #F9F9F9;
-}
 
-.texto-informativo1{
 
-    font-size: 17px;
-    text-align: left;
-}
-.texto-informativo{
-padding-top: 6px;
-margin-top: -15px;
-    font-size: 10px;
-}
-
-.b {
+.menuinformacional {
+    padding-left: 130px;
     display: grid;
-    grid-template-columns: auto auto auto ;
-    padding-bottom: 100px;
-    margin: 50px 0px 50px 70px;
-   
-    text-align: center;
-    font-family: Inter;
-    grid-auto-columns: column;
-    columns: auto;
-}
-    
-    
-
-
-
-.texto-informativo {
-
+    grid-template-rows: 40px 40px;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    height: 240px;
+}
+
+.menuinformacional {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    flex-direction: row;
+    justify-items: center;
+    align-items: space-around;
+
+}
+
+
+#texto-informativo1 {
+    justify-self: start;
+    font-weight: bold;
+    font: 500;
+    font-size: 23px;
+    font-family: inter;
+    order: 2;
+}
+
+#texto-informativo2 {
+    justify-self: start;
+    font-size: 16px;
+    font-family: inter;
+    order: 5;
+}
+
+
+#texto-informativo3 {
+    justify-self: start;
+    font-weight: bold;
+    font: 500;
+    font-size: 23px;
+    font-family: inter;
+    order: 1;
+}
+
+#texto-informativo4 {
+    justify-self: start;
+    font-size: 16px;
+    font-family: inter;
+    order: 4;
+}
+
+
+#texto-informativo5 {
+    justify-self: start;
+    font-weight: bold;
+    font: 500;
+    font-size: 23px;
+    font-family: inter;
+    order: 3;
+}
+
+#texto-informativo6 {
+    justify-self: start;
+    font-size: 16px;
+    font-family: inter;
+    order: 6;
 }
