--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
-@font-face {
+@font-face { 
     font-family: 'Inter';
     src: url('./fonts/LTInternet-Regular.ttf')
-    format('truetype') ;
+    format('TrueType') ;
     font-weight: normal;
+    font-style: normal;
+}
+
+    @font-face {
+    font-family: 'Raleway' ;
+    src: url('./fonts/Kanit-Regular.ttf')
+    format('TrueType');
+    font-weight:normal;
     font-style: normal;
 }
 
@@ -12,7 +20,6 @@
     padding: 0px;
     box-sizing: border-box;
 }
-
 
 #menusuperior{
 
@@ -108,6 +115,7 @@
     grid-template-columns: 1fr minmax(20% , 40%);
     grid-template-areas:  h1 , texto-informativo 
     ;   
+    height: 610px;
 }
 
 #h1{
@@ -141,4 +149,64 @@
     margin-right: 52px;
     order: 2;
    
+}
+
+#divform{
+    background-color: #303030;
+    height: 415px;
+}
+
+#tituloformulario{
+    font-family: 'Inter';
+    color: #FFFFFF;
+    text-align: center;
+    padding-top: 5%;
+
+                                                        
+}
+
+input{
+    font-family: 'Raleway';
+    font-size: large;
+    display: flex;
+    margin: 45px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 40px;
+    width: 300px;
+    background-color: #FFFFFF;
+    border-radius: 7px;
+    padding-left: 15px;
+
+
+}
+
+input:hover{
+transform: translate(+2px , -1px);
+border: double , rgb(79, 238, 140);
+background-color: #f5e6e6;
+box-shadow: 0px 4px 8px 0px #697769;
+transition-duration: 0.2s;
+}
+
+#botao{
+    font-family: 'Raleway';
+    margin-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    background-color: #f78b07;
+    width: 180px;
+    color: #FFFFFF;
+    font-size: 25px;
+    cursor: pointer;
+    
+}
+
+#botao:hover{
+    background-color: #e49c44;
+    color: #63db63;
+    transform: translate( +7px , -3px);
+    transition-duration: 0.3s;
+    box-shadow: 0px 4px 8px 0px #10b642;
 }
