--- a/style.css
+++ b/style.css
@@ -120,7 +120,6 @@
 
 #h1{
     grid-area: h1;
-
     font-size: 38px;
     order: 1;
     display: grid;
@@ -147,8 +146,7 @@
     max-width: 100%;
     max-height: 100%;
     margin-right: 52px;
-    order: 2;
-   
+    
 }
 
 #divform{
@@ -209,4 +207,14 @@ transition-duration: 0.2s;
     transform: translate( +7px , -3px);
     transition-duration: 0.3s;
     box-shadow: 0px 4px 8px 0px #10b642;
+}
+
+
+#X {
+    display: none;
+    position: absolute;
+    border-radius: 25%;
+    transform: scale(0.090);
+    margin-left:740px ;
+    margin-top: -375px;
 }
